Changement des logos formmat PNG → WEBP + Normalisation du style SASS + Ajout des balises meta 'robots' et 'description'

--- a/frontend/groupomania/src/index.html
+++ b/frontend/groupomania/src/index.html
@@ -9,7 +9,9 @@
     <title>Groupomania</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta name="robots" content="index, follow" />
+    <meta description="Bienvenue sur Groupomania, votre réseau social d'entreprise privé!" />
+    <link rel="icon" type="image/x-icon" href="../src/assets/icon.webp" />
 </head>
 
 <body>
