Ajout de la balise meta 'color' pour le light & dark mode

--- a/frontend/groupomania/src/index.html
+++ b/frontend/groupomania/src/index.html
@@ -11,7 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index, follow" />
     <meta description="Bienvenue sur Groupomania, votre réseau social d'entreprise privé!" />
-    <link rel="icon" type="image/x-icon" href="../src/assets/icon.webp" />
+    <meta color="color-scheme" content="light dark" />
+    <link rel="icon" type="image/x-icon" href="./assets/icon.webp" />
 </head>
 
 <body>
