Ajout de petits styles au headerComponent

--- a/frontend/groupomania/src/index.html
+++ b/frontend/groupomania/src/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="index, follow" />
     <meta description="Bienvenue sur Groupomania, votre réseau social d'entreprise privé!" />
     <meta color="color-scheme" content="light dark" />
-    <link rel="icon" type="image/x-icon" href="./assets/icon.webp" />
+    <link rel="icon" type="image/x-icon" href="./assets/icon.svg" />
 </head>
 
 <body>
