Tentative d'ajout de reactive forms à la place des templat forms (fail)

--- a/frontend/groupomania/src/index.html
+++ b/frontend/groupomania/src/index.html
@@ -8,11 +8,15 @@
     <meta charset="utf-8" />
     <title>Groupomania</title>
     <base href="/" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index, follow" />
     <meta description="Bienvenue sur Groupomania, votre réseau social d'entreprise privé!" />
     <meta color="color-scheme" content="light dark" />
     <link rel="icon" type="image/x-icon" href="./assets/icon.svg" />
+    <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet" />
+    <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet" />
+    <link href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all" rel="stylesheet" />
 </head>
 
 <body>
